<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Second">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:layout_gravity="top"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acitvity_money"
                    android:textColor="#fff"
                    android:background="@drawable/yellow_rect"
                    android:textSize="12sp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"/>

                <AutoCompleteTextView
                    android:id="@+id/second_Blances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_blance"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_account"
                    android:textColor="#192360"
                    android:textSize="15sp" />

                <AutoCompleteTextView
                    android:id="@+id/second_WalletAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_address"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

<!--                    <Button-->
<!--                        android:id="@+id/second_submit"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="end|center_vertical"-->
<!--                        android:text="@string/activity_button" />-->
                </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>