<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attribute="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="design.ws.com.wallet.MainActivity">

    <customfonts.StickyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <developer.shivam.crescento.CrescentoImageView
                        android:id="@+id/crescentoImageView"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:elevation="20dp"
                        android:scaleType="centerCrop"
                        attribute:gravity="top"
                        attribute:curvature="70dp"
                        attribute:crescentoTintMode="manual"
                        attribute:crescentoTintColor="#00000000"
                        android:src="@drawable/multi"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        app:contentInsetLeft="0dp"
                        app:contentInsetStart="0dp"
                        android:layout_height="50dp">

                        <customfonts.MyTextView_Roboto_Bold
                            android:id="@+id/wallet_title"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/activity_wallet"
                            android:textColor="#fff"/>
                    </android.support.v7.widget.Toolbar>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/card_bg"
                            android:elevation="5dp"
                            app:cardCornerRadius="4dp"
                            android:layout_gravity="bottom">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginLeft="25dp"
                                android:layout_marginRight="25dp"
                                android:orientation="vertical">

                                <customfonts.MyTextView_Roboto_Medium
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#192360"
                                    android:text="@string/activity_username"/>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:orientation="horizontal">

                                    <customfonts.MyTextView_Roboto_Medium
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/acitvity_money"
                                        android:textColor="#fff"
                                        android:background="@drawable/yellow_rect"
                                        android:textSize="12sp"
                                        android:paddingTop="2dp"
                                        android:paddingBottom="2dp"
                                        android:paddingRight="8dp"
                                        android:paddingLeft="8dp"/>

                                    <customfonts.MyTextView_Roboto_Regular
                                        android:id="@+id/wallet_dollers"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="20sp"
                                        android:textColor="#192360"
                                        android:layout_marginStart="35dp"
                                        android:layout_marginLeft="35dp"
                                        android:text="@string/activity_dollors"
                                        android:textIsSelectable="true" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:orientation="horizontal">

                                    <customfonts.MyTextView_Roboto_Medium
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/activity_account"
                                        android:textColor="#192360"
                                        android:textSize="15sp"/>

                                    <LinearLayout
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="20dp"
                                        android:layout_marginLeft="20dp"
                                        android:orientation="vertical">

                                    <customfonts.MyTextView_Roboto_Medium
                                        android:id="@+id/wallet_trans"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="15sp"
                                        android:textColor="#192360"
                                        android:text="@string/activity_trans"
                                        android:textIsSelectable="true" />
                                    </LinearLayout>
                                </LinearLayout>

<!--                                <LinearLayout-->
<!--                                    android:layout_width="match_parent"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:layout_marginTop="15dp"-->
<!--                                    android:orientation="horizontal">-->

<!--                                    <Button-->
<!--                                        android:id="@+id/wallet_submit"-->
<!--                                        android:layout_width="wrap_content"-->
<!--                                        android:layout_height="wrap_content"-->
<!--                                        android:text="@string/activity_button"/>-->
<!--                                </LinearLayout>-->
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="sticky"
                        android:orientation="vertical">

                        <customfonts.CustomTabLayout
                            android:id="@+id/tab_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/tabindiacator_background"
                            android:letterSpacing=".08"
                            app:tabGravity="fill"
                            app:tabIndicatorHeight="0dp"
                            app:tabMode="scrollable"

                            app:tabTextAppearance="@style/MyMenuTextAppearance"
                            custom:tabSelectedTextColor="@color/Indicator_tabSelectedTextColor"
                            custom:tabTextColor="@color/Indicator_tabTextColor" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:orientation="vertical"
                            android:background="@drawable/shadow"/>
                    </LinearLayout>

<!--                    <design.ws.com.wallet.WrapContentHeightViewPager-->
<!--                        android:id="@+id/pager"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:background="#fff" />-->

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:elevation="5dp"
                        android:layout_gravity="top"
                        app:cardBackgroundColor="@color/card_bg"
                        app:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:orientation="horizontal">

                                <customfonts.MyTextView_Roboto_Medium
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/acitvity_money"
                                    android:textColor="#fff"
                                    android:background="@drawable/yellow_rect"
                                    android:textSize="12sp"
                                    android:paddingTop="2dp"
                                    android:paddingBottom="2dp"
                                    android:paddingRight="8dp"
                                    android:paddingLeft="8dp"/>

                                <AutoCompleteTextView
                                    android:id="@+id/activity_Blances"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/fragment_blance"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginStart="35dp"
                                    android:layout_marginLeft="35dp"
                                    android:layout_marginBottom="2dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:orientation="horizontal">

                                <customfonts.MyTextView_Roboto_Medium
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/activity_account"
                                    android:textColor="#192360"
                                    android:textSize="15sp" />

                                <AutoCompleteTextView
                                    android:id="@+id/activity_WalletAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/fragment_address"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginBottom="2dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:orientation="vertical">

                                <Button
                                    android:id="@+id/wallet_submit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end|center_vertical"
                                    android:text="@string/activity_button" />
                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </customfonts.StickyScrollView>
</RelativeLayout>
